...
            "value" : "إنشاء"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Create"
          }
        }
      }
    },
    "collection.nameLabel" : {
      "extractionState" : "manual",
...
            "value" : "اسم المجموعة"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Collection name"
          }
        }
      }
    },
    "collection.nameTaken" : {
      "extractionState" : "manual",
...
            "value" : "حفظ"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Save"
          }
        }
      }
    },
    "designsystem.abstract" : {
      "extractionState" : "manual",
...
            "value" : "في المكتبة"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "In library"
          }
        }
      }
    },
    "designsystem.noAbstract" : {
      "extractionState" : "manual",
...
            "value" : "إزالة من المكتبة"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Remove from library"
          }
        }
      }
    },
    "designsystem.save" : {
      "extractionState" : "manual",
...
            "value" : "تم"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Done"
          }
        }
      }
    },
    "notes.saveFailed" : {
      "extractionState" : "manual",
...
